--- a/anhäufung.html
+++ b/anhäufung.html
@@ -129,9 +129,9 @@ ul {
 <div class="row">
   <div class="column">
     <h2>Job</h2>
-	 <p> <a href="https://drive.google.com/drive/folders/1a2fBXXUrjXOIgXhWJSpTS0RuD-if09t0?usp=sharing">Dokumente </a>
- <a href="https://www.bio-inspecta.ch/de/home">bio inspecta </a> 
-<a href="https://greenstate.ch/de/invest-basil/?device=m&campaign=search_brand&adgroup=&keyword=greenstate&matchtype=bad=ad&gad_source=1&gclid=Cj0KCQiAo7KqBhDhARIsAKhZ4ug-zQWDhuz5derbXD4dz4iWG-bAnaGaQzlpExntxH23K9-HZ_TqOLEaAhkkEALw_wcB">GreenState </a>
+	 <p> <a href="https://drive.google.com/drive/folders/1a2fBXXUrjXOIgXhWJSpTS0RuD-if09t0?usp=sharing">Dokumente </a> <br/>
+ <a href="https://www.bio-inspecta.ch/de/home">bio inspecta </a> <br/>
+<a href="https://greenstate.ch/de/invest-basil/?device=m&campaign=search_brand&adgroup=&keyword=greenstate&matchtype=bad=ad&gad_source=1&gclid=Cj0KCQiAo7KqBhDhARIsAKhZ4ug-zQWDhuz5derbXD4dz4iWG-bAnaGaQzlpExntxH23K9-HZ_TqOLEaAhkkEALw_wcB">GreenState </a>  <br/>   
 
 	 </p>
 	  
