--- a/ideen.html
+++ b/ideen.html
@@ -185,32 +185,28 @@ ul {
   <div class="column" style="background-color:#2ECCFA;">
 	  
     			<h2>Spass</h2>  
-		
-  <h4>Soziales</h4>     	
-
-  Reisen
-  Brettspielgruppe, Events
-  Queer Event
-  Ausflüge planen
-  <dt>Bildung</dt>
-  <dd>Politik?</dd>
-  <dd>Griechisch lernen</dd>
-  <dd>Essays/Buch schreiben</dd>
-  <dd>Steinli</dd>
-  <dd>Philosophie Lesegruppe</dd>
-  <dt>Sport</dt>
-  <dd>Alleine Wandern</dd>
-  <dd>Selbstverteidigung</dd>
-  <dd>Snowboarden</dd>
-  <dd>Sportverein?</dd>
-  <dt>Sonstiges</dt>
-  <dd>Gärtnerei</dd>
-  <dd>Restaurant</dd>
-  <dd>Kreidesprüche, Sticker</dd>
-  <dd>Konzert besuchen</dd>
-  <dd>Musik machen</dd>
-  <dd>Casino</dd>
-  <dd>Wohnmobil</dd>
+		 <p>
+	 Reisen<br/> 
+  Brettspielgruppe, Events<br/> 
+  Queer Event<br/> 
+  Bildung<br/> 
+  Politik?<br/> 
+  Griechisch lernen<br/> 
+  Essays/Buch schreiben<br/> 
+  Steinli<br/> 
+  Philosophie Lesegruppe<br/> 
+  Sport<br/> 
+  Alleine Wandern<br/> 
+  Selbstverteidigung<br/> 
+  Snowboarden<br/> 
+ <br/> 
+  Gärtnerei<br/> 
+  Restaurant<br/> 
+  Kreidesprüche, Sticker<br/> 
+  Konzert besuchen<br/>
+  Musik machen<br/> 
+  Casino<br/> 
+  Wohnmobil<br/> 
 	 
 	 Vereinssuche<br/> 
 Meine Spielidee<br/> 
@@ -222,7 +218,7 @@ Karteikartenprogramm<br/>
 Argumente Buch<br/> 
 Nähen<br/> 
 
-		
+  </p>	
  </div>
 </div>
 
