--- a/ideen.html
+++ b/ideen.html
@@ -140,7 +140,7 @@ ul {
   </div>
 
 
-  <div class="column" style="background-color:#2ECCFA;">
+  <div class="column">
 	  
     			<h2>Ernstes</h2>
    <p>
