--- a/ideen.html
+++ b/ideen.html
@@ -22,6 +22,7 @@
 			padding: 10px;
 			margin-left: 20px;
             opacity: 1;
+			text-align:center;
 		}
 		body{
 			background-color: #000000;
@@ -140,7 +141,7 @@ ul {
   </div>
 
 
-  <div class="column" text-align="center">
+  <div class="column">
 	  
     			<h2>Ernstes</h2>
    <p>
