--- a/ideen.html
+++ b/ideen.html
@@ -42,6 +42,7 @@
             border-style: inset;
             border-color: #01DFA5;
          	font-size: 30px;
+			text-align:center;
 				}
 		
 
