--- a/ideen.html
+++ b/ideen.html
@@ -184,7 +184,7 @@ ul {
   </div>
 	 
   
-  <div class="column" style="background-color:#2ECCFA;">
+  <div class="column">
 	  
     			<h2>Spass</h2>  
 		 <p>
