--- a/anhäufung.html
+++ b/anhäufung.html
@@ -25,6 +25,17 @@
             opacity: 1;
 		}
 
+		table{
+			font-size:17px ;
+			color: #white;
+			height: 80%;
+			background-color: #2A0A12;
+			padding: 10px;
+			margin-left: 20px;
+            opacity: 1;
+		}
+        
+
 		body{
 			background-color: #000000;
 			color:white;
@@ -129,7 +140,7 @@ ul {
 <div class="row">
   <div class="column">
     <h2>Job</h2>
-	 <p> 
+
 		 <table style="width:100%">
   <tr>
     <td>Dokumente</td>
@@ -146,8 +157,7 @@ ul {
  <a href="https://www.bio-inspecta.ch/de/home">bio inspecta </a> <br/>
 <a href="https://greenstate.ch/de/invest-basil/?device=m&campaign=search_brand&adgroup=&keyword=greenstate&matchtype=bad=ad&gad_source=1&gclid=Cj0KCQiAo7KqBhDhARIsAKhZ4ug-zQWDhuz5derbXD4dz4iWG-bAnaGaQzlpExntxH23K9-HZ_TqOLEaAhkkEALw_wcB">GreenState </a>  <br/>   
 
-	 </p>
-	  
+	
   </div>
   
   
