--- a/anhäufung.html
+++ b/anhäufung.html
@@ -144,13 +144,13 @@ ul {
 		 <table style="width:100%">
   <tr>
     <td>Dokumente</td>
-    <td>Tobias</td>
-    <td>Linus</td>
+    <td><a href="https://drive.google.com/drive/folders/1a2fBXXUrjXOIgXhWJSpTS0RuD-if09t0?usp=sharing">Dokumente </a></td>
+  
   </tr>
   <tr>
-    <td> <a href="https://drive.google.com/drive/folders/1a2fBXXUrjXOIgXhWJSpTS0RuD-if09t0?usp=sharing">Dokumente </a></td>
-    <td>14</td>
-    <td>10</td>
+    <td> anderes</td>
+    <td>link <br/> link 2 </td>
+
   </tr>
 </table>
 	  <a href="https://drive.google.com/drive/folders/1a2fBXXUrjXOIgXhWJSpTS0RuD-if09t0?usp=sharing">Dokumente </a> <br/>
