--- a/rezepte.html
+++ b/rezepte.html
@@ -158,7 +158,7 @@ ul {
 	In Folie einpacken, 30min in den Kühlschrank. Danach schneiden - schwierig wegen Schokoladenwürfeln. <br/>
 	<br/>
 	200 Grad C Umfluft, 10min in Ofenmitte <br/>
-
+ Konsistenz krümelig, zu viel Haselnüsse? Lieber kein Vanillezucker? Mehr Butter? Bisschen Sprudelwasser?
 	</p>
 
 
