--- a/rezepte.html
+++ b/rezepte.html
@@ -159,7 +159,28 @@ ul {
 	<br/>
 	200 Grad C Umfluft, 10min in Ofenmitte <br/>
  Konsistenz krümelig, zu viel Haselnüsse? Lieber kein Vanillezucker? Puderzucker? Mehr Butter? Bisschen Sprudelwasser? Maizena? alles sieben? vielleicht nur 9min
-	</p>
+	
+	<br/><br/>
+	
+	Zweiter Versuch: Sieben!<br/>
+	100g Mehl <br/>
+	1 TL Maizena <br/>
+	35g Margarine <br/>
+	40g Butter <br/>
+	35g Puderzucker <br/>
+	15g gemahlene Haselnüsse <br/>
+	15g Schokoladenwürfel <br/>
+	0.5 TL Vanilleextrakt <br/>
+	1 EL Wasser <br/>
+	1 Prise Salz <br/>
+	<br/>
+	In Folie einpacken, 30min in den Kühlschrank. Danach schneiden - schwierig wegen Schokoladenwürfeln. <br/>
+	<br/>
+	200 Grad C Umfluft, 9min in Ofenmitte <br/>
+
+
+
+</p>
 
 
 <script>
