--- a/rezepte.html
+++ b/rezepte.html
@@ -173,11 +173,12 @@ ul {
 	0.5 TL Vanilleextrakt <br/>
 	1 EL Wasser <br/>
 	1 Prise Salz <br/>
+	Arbeitsfläche mit Mehl bestäuben
 	<br/>
 	In Folie einpacken, 30min in den Kühlschrank. Danach schneiden - schwierig wegen Schokoladenwürfeln. <br/>
 	<br/>
 	200 Grad C Umfluft, 9min in Ofenmitte <br/>
-
+	fettiger
 
 
 </p>
