--- a/rezepte.html
+++ b/rezepte.html
@@ -157,7 +157,7 @@ ul {
 	<br/>
 	In Folie einpacken, 30min in den Kühlschrank. Danach schneiden - schwierig wegen Schokoladenwürfeln. <br/>
 	<br/>
-	200 Grad C Umfluft, 10min in Ofenmitte <br/>
+	200 Grad C Ober Unter, 10min in Ofenmitte <br/>
  Konsistenz krümelig, zu viel Haselnüsse? Lieber kein Vanillezucker? Puderzucker? Mehr Butter? Bisschen Sprudelwasser? Maizena? alles sieben? vielleicht nur 9min
 	
 	<br/><br/>
@@ -175,10 +175,10 @@ ul {
 	1 Prise Salz <br/>
 	Arbeitsfläche mit Mehl bestäuben
 	<br/>
-	In Folie einpacken, 30min in den Kühlschrank. Danach schneiden - schwierig wegen Schokoladenwürfeln. <br/>
+	In Folie einpacken, ca 60min in den Kühlschrank. Danach schneiden <br/>
 	<br/>
-	200 Grad C Umfluft, 9min in Ofenmitte <br/>
-	fettiger
+	200 Grad C Ober Unter, 9min in Ofenmitte, Backblech kalt <br/>
+	fettiger, Boden dunkler,
 
 
 </p>
