--- a/rezepte.html
+++ b/rezepte.html
@@ -180,8 +180,19 @@ ul {
 	200 Grad C Ober Unter, 9min in Ofenmitte, Backblech kalt <br/>
 	fettiger, Boden dunkler,
 
+<br/>
 
+	2 Portionen Pizzateig 
+<br/>
+	250g Mehl <br/>
+	1Tl Salz <br/>
+	5g Hefe <br/>
+	Öl 1El <br/>
+	Wasser 160ml <br/>
+
+	
 </p>
+
 
 
 <script>
